Bug 91913 - BASIC Editor: Line number display activation does not survive LO restart; line number column opens too narrow
Summary: BASIC Editor: Line number display activation does not survive LO restart; lin...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: BASIC (show other bugs)
Version:
(earliest affected)
4.3.5.2 release
Hardware: All All
: medium minor
Assignee: tagezi
URL:
Whiteboard: target:5.5.0 target:5.4.0.1
Keywords:
Depends on:
Blocks:
 
Reported: 2015-06-07 03:59 UTC by Johnny_M
Modified: 2017-05-25 18:49 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Johnny_M 2015-06-07 03:59:22 UTC
Activation status of the line number display in the BASIC editor does not survive LibreOffice restart.

Test procedure:
1. Start LO and open the BASIC editor (e.g. via macro editing from within a Calc spreadsheet)
2. Under the View menu, activate the line number display
3. Close LO completely (i.e. all its windows, including the BASIC editor, Calc, etc.)
4. Re-open the BASIC Editor as on step 1

Expected results:
4. Line number display stays activated

Actual results:
4. Line number display is deactivated

Notes:
- Unlike the above, other options in the View menu (e.g. the active by default "Status Bar" and "Input Method Status") DO keep their activation status after the above LO restart when changed.

OS: Linux Mint 17.1 (based on Ubuntu 14.04 LTS), 3.13.0-37-generic #64-Ubuntu SMP Mon Sep 22 21:28:38 UTC 2014 x86_64
LO (4.4.3.2): ppa:libreoffice/libreoffice-4-4
Comment 1 Johnny_M 2015-06-07 04:29:41 UTC
Also, on a related minor note (referring to the "line number column opens too narrow" part of the bug report summary):

There seems to be some update trigger missing upon activation of the line number display. I.e.: When one activates it for the FIRST time after the LO start, the number column is shown with its minimum width instead of adjusting to the number width (e.g. hundreds or thousands of lines). It does that though with a subsequent text scroll.

Test procedure:
1. Close LO completely (all windows).
2. Open LO and open a long (hundreds of lines) BASIC macro file in the BASIC editor
3. Scroll down the file (to where lines numbers are in their hundreds)
4. Activate the line number display
5. Scroll in the file

Expected results:
4. Line number column appears showing the entire number

Actual results:
4. Line number column width is enough for the two first digits, with subsequent digits cut off
5. The width adjusts and shows the entire number

Whereas the width appears immediately correct on subsequent toggling of the line number display without closing LO.
Comment 2 Johnny_M 2015-06-08 03:30:27 UTC
I could reproduce all of it in the LO 4.3.5 release on WinXP 32 bit. So, I'm going to adjust the reported hardware and LO version accordingly.
Comment 3 raal 2015-06-08 12:29:37 UTC
(In reply to Johnny_M from comment #0)
> Activation status of the line number display in the BASIC editor does not
> survive LibreOffice restart.
> 


I can confirm with LO 4.4.3, win7
Comment 4 tagezi 2017-05-25 07:51:44 UTC
I took this issue.
Comment 5 Commit Notification 2017-05-25 14:58:25 UTC
tagezi committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3bdd04cd54a42a98f7f679e749f3da0f164ac18f

tdf#91913 Saving line numbering into setting

It will be available in 5.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2017-05-25 16:57:40 UTC
tagezi committed a patch related to this issue.
It has been pushed to "libreoffice-5-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f80c3e37e59285875bc9ec025661bcf1b8fc60eb&h=libreoffice-5-4

tdf#91913 Saving line numbering into setting

It will be available in 5.4.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.