tdf#91913 Saving line numbering into setting

It saves setting of the line numbering for next start
Now the line numbering is enabled by default

Change-Id: Ib658d417882996eb843fed9b236496fe2fb42166